--- a/blog3.html
+++ b/blog3.html
@@ -57,20 +57,20 @@
 - Explore their significance in powering applications and facilitating seamless data management.<br>
 
 <h3>The Evolution of Databases<br></h3>
-- **Relational Databases:** Emerged in the '70s, fostering structured data storage and efficient querying.<br>
-- **NoSQL Databases:** A response to the demand for handling unstructured and dynamic data in modern applications.<br>
+- Relational Databases: Emerged in the '70s, fostering structured data storage and efficient querying.<br>
+- NoSQL Databases: A response to the demand for handling unstructured and dynamic data in modern applications.<br>
 
 <h3>Understanding Database Models<br></h3>
-- **Relational Model:** Tables, rows, and columns form the foundation of structured data storage.<br>
-- **Document Store:** NoSQL databases like MongoDB excel in handling flexible, document-oriented data.<br>
+- Relational Model: Tables, rows, and columns form the foundation of structured data storage.<br>
+- Document Store: NoSQL databases like MongoDB excel in handling flexible, document-oriented data.<br>
 
 <h3>Tools of the Database Trade<br></h3>
 - Explore popular database management systems (DBMS) like MySQL, PostgreSQL, and MongoDB.<br>
 - Discuss the strengths and use cases of each, highlighting their role in diverse applications.<br>
 
 <h3>Database Design Principles<br></h3>
-- **Normalization:** Ensuring data integrity through efficient structuring of relational databases.<br>
-- **Indexing:** Optimizing data retrieval by creating indexes on key columns.<br>
+- Normalization: Ensuring data integrity through efficient structuring of relational databases.<br>
+- Indexing: Optimizing data retrieval by creating indexes on key columns.<br>
 
 <h3>Data Security and Privacy<br></h3>
 - Explore the critical aspects of securing databases against unauthorized access and potential breaches.<br>
