--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="name">Saurav</div>
                     <div class="about"><b>Developer, Entrepreneur,<br> Graphics Designer, Programmer</b></div>
-                    <div class="moreabout"><i>Services like web development <br>graphics design, logo design<br>are available, don't forget <br> to contact me by clicking below<br> 
+                    <div class="moreabout"><i>Services like App development, Web development <br>graphics design, logo design<br>are available, don't forget <br> to contact me by clicking below<br> 
                    </i> 
                     </div>
                     <div class="buttons"><a href="/cv of saurav.pdf">
