--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
                     <div class="moreabout"><i>Services like App development, Web development <br>graphics design, logo design<br>are available, don't forget <br> to contact me by clicking below<br> 
                    </i> 
                     </div>
-                    <div class="buttons"><a href="/cv of saurav.pdf">
+                    <div class="buttons"><a href="/saurav flutter developer cv.pdf">
                         <button class="btn">Download CV</button></a>
                         <a href="/contact.html"><button class="btn">Contact me</button></a>
                     </div>
