--- a/intro.html
+++ b/intro.html
@@ -71,7 +71,7 @@
   </tr>
                         <tr>
     <td>Python:</td>
-    <td><div class="skill ninty"></div></td>
+    <td><div class="skill fifty"></div></td>
   </tr>
                         <tr>
     <td>C:</td>
@@ -82,7 +82,7 @@
     <td><div class="skill seventty"></div></td>
   </tr>
                         <tr>
-    <td>Java:</td>
+    <td>Dart:</td>
     <td><div class="skill .Item"></div></td>
   </tr>
                         <tr>
@@ -90,8 +90,8 @@
     <td><div class="skill ten"></div></td>
   </tr>
                         <tr>
-    <td>Jquery:</td>
-    <td><div class="skill ten"></div></td>
+    <td>Flutter:</td>
+    <td><div class="skill seventty"></div></td>
   </tr>
                         
                 </div>
