--- a/intro.html
+++ b/intro.html
@@ -43,7 +43,7 @@
             <img class="cross" src="cross.jpg" alt="closesidebar" onclick="closesidebar()" width="23">            
             </div>
             <div class="intro">
-                <h1>About me</h1><p>"Passionate Web Developer and IT Student | Crafting Digital Experiences | Bridging Creativity with Code | Let's Build the Future Together!"
+                <h1>About me</h1><p>"Passionate App Developer and IT Student | Crafting Digital Experiences | Bridging Creativity with Code "
                 </p>
                 <h2>My skills</h2>
 
